deployment/kubernetes/pingconsent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingconsent
  name: pingconsent
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingconsent
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: pingconsent
    spec:
      containers:
      - env:
        - name: HTTPS_PORT
          valueFrom:
            configMapKeyRef:
              key: HTTPS_PORT
              name: env-vars
        - name: PF_LOG_LEVEL
          valueFrom:
            configMapKeyRef:
              key: PF_LOG_LEVEL
              name: env-vars
        - name: PF_USER_PWD
          valueFrom:
            configMapKeyRef:
              key: PF_USER_PWD
              name: env-vars
        - name: PING_IDENTITY_ACCEPT_EULA
          valueFrom:
            configMapKeyRef:
              key: PING_IDENTITY_ACCEPT_EULA
              name: env-vars
        - name: REST_API_HOSTNAME
          valueFrom:
            configMapKeyRef:
              key: REST_API_HOSTNAME
              name: env-vars
        - name: USER_BASE_DN
          valueFrom:
            configMapKeyRef:
              key: USER_BASE_DN
              name: env-vars
        image: pricecs/consentdashboard
        imagePullPolicy: ""
        name: pingconsent
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
