deployment/kubernetes/pingdatasync-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingdatasync
  name: pingdatasync
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingdatasync
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: pingdatasync
    spec:
      containers:
      - env:
        - name: HTTPS_PORT
          valueFrom:
            configMapKeyRef:
              key: HTTPS_PORT
              name: env-vars
        - name: PF_LOG_LEVEL
          valueFrom:
            configMapKeyRef:
              key: PF_LOG_LEVEL
              name: env-vars
        - name: PF_USER_PWD
          valueFrom:
            configMapKeyRef:
              key: PF_USER_PWD
              name: env-vars
        - name: PING_IDENTITY_ACCEPT_EULA
          valueFrom:
            configMapKeyRef:
              key: PING_IDENTITY_ACCEPT_EULA
              name: env-vars
        - name: REST_API_HOSTNAME
          valueFrom:
            configMapKeyRef:
              key: REST_API_HOSTNAME
              name: env-vars
        - name: SERVER_PROFILE_PATH
          value: pingdatasync
        - name: SERVER_PROFILE_URL
          value: https://github.com/pingidentity/Customer360.git
        - name: USER_BASE_DN
          valueFrom:
            configMapKeyRef:
              key: USER_BASE_DN
              name: env-vars
        image: pingidentity/pingdatasync:latest
        imagePullPolicy: ""
        name: pingdatasync
        ports:
        - containerPort: 636
        - containerPort: 443
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
