deployment/kubernetes/pingdirectory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingdirectory
  name: pingdirectory
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingdirectory
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: pingdirectory
    spec:
      containers:
      - env:
        - name: PF_LOG_LEVEL
          valueFrom:
            configMapKeyRef:
              key: PF_LOG_LEVEL
              name: env-vars
        - name: PF_USER_PWD
          valueFrom:
            configMapKeyRef:
              key: PF_USER_PWD
              name: env-vars
        - name: PING_IDENTITY_ACCEPT_EULA
          valueFrom:
            configMapKeyRef:
              key: PING_IDENTITY_ACCEPT_EULA
              name: env-vars
        - name: REST_API_HOSTNAME
          valueFrom:
            configMapKeyRef:
              key: REST_API_HOSTNAME
              name: env-vars
        - name: SERVER_PROFILE_PATH
          value: pingdirectory
        - name: SERVER_PROFILE_URL
          value: https://github.com/pingidentity/Customer360.git
        - name: USER_BASE_DN
          valueFrom:
            configMapKeyRef:
              key: USER_BASE_DN
              name: env-vars
        image: pingidentity/pingdirectory:8.1.0.0-EA-edge
        imagePullPolicy: ""
        name: pingdirectory
        ports:
        - containerPort: 389
        - containerPort: 636
        - containerPort: 443
        - containerPort: 2443
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
status: {}
