deployment/kubernetes/pingfederate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingfederate
  name: pingfederate
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pingfederate
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: pingfederate
    spec:
      containers:
      - args:
        - wait-for
        - pingdirectory:389
        - -t
        - "600"
        - --
        - entrypoint.sh
        - start-server
        image: pingidentity/pingfederate:latest
        imagePullPolicy: ""
        name: pingfederate
        ports:
        - containerPort: 9031
        - containerPort: 9999
        resources: {}
        volumeMounts:
        - mountPath: /run/secrets/devops-secret
          name: devops-secret
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: devops-secret
        secret:
          items:
          - key: devops-secret
            path: devops-secret
          secretName: devops-secret
status: {}
