deployment/kubernetes/pingconsent-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingconsent
  name: pingconsent
spec:
  ports:
  - name: "8088"
    port: 8088
    targetPort: 80
  selector:
    io.kompose.service: pingconsent
status:
  loadBalancer: {}
