deployment/kubernetes/pingdatagov-pap-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f Compose/docker-compose.yaml --volumes configMap
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: pingdatagov-pap
  name: pingdatagov-pap
spec:
  ports:
  - name: "9443"
    port: 9443
    targetPort: 9443
  selector:
    io.kompose.service: pingdatagov-pap
status:
  loadBalancer: {}
