deployment/kubernetes/pingaccess-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public-passthrough
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: pingaccess-ingress
  namespace: ping-cloud-devops-eks-cprice
spec:
  rules:
  - host: demo.cpricelab.com
    http:
      paths:
      - path: /.well-known/acme-challenge/
        backend:
          serviceName: pingaccess
          servicePort: 80
      - backend:
          serviceName: pingaccess
          servicePort: 443
