deployment/kubernetes/pingadminconsoles-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public-passthrough
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: pingadminconsoles-ingress
  namespace: ping-cloud-devops-eks-cprice
spec:
  # Use the AWS Route53 FQDNs to access the Admin Consoles
  rules:
  # This rule gives external access to the PingAccess Admin Console
  - host: pingaccess-ping-cloud-devops-eks-cprice.ping-devops.com
    http:
      paths:
       - backend:
           serviceName: pingaccess
           servicePort: 9000
  # This rule gives external access to the PingFederate Admin Console
  - host: pingfederate-ping-cloud-devops-eks-cprice.ping-devops.com
    http:
      paths:
       - backend:
          serviceName: pingfederate
          servicePort: 9999
  # This rule gives external access to the PingData Admin Console
  - host: pingdataconsole-ping-cloud-devops-eks-cprice.ping-devops.com
    http:
      paths:
       - backend:
          serviceName: pingdataconsole
          servicePort: 8443
  # This rule gives external access to the PingDataGovernance-PAP Admin Console
  - host: pingdatagov-pap-ping-cloud-devops-eks-cprice.ping-devops.com
    http:
      paths:
       - backend:
          serviceName: pingdatagov-pap
          servicePort: 9443
  # This rule gives external access to the PingCentral Admin Console
  - host: pingcentral-ping-cloud-devops-eks-cprice.ping-devops.com
    http:
      paths:
       - backend:
          serviceName: pingcentral
          servicePort: 9022
